--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,8 +1,34 @@
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <TextView
+        android:id="@+id/list_counter_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:text="Name" />
+    
+    <TextView
+        android:id="@+id/list_counter_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Count"
+        android:layout_alignParentRight="true" />
+
+</RelativeLayout>
+
+
+<!-- OLD 
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dp"
-    android:textSize="16sp" >
-    
+    android:textSize="16sp" > 
 </TextView>
+
+
+
+
+-->
