--- a/res/layout/stats_list_item.xml
+++ b/res/layout/stats_list_item.xml
@@ -1,9 +1,21 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-       android:id="@+id/stats_list_date"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentLeft="true"
-       android:textSize="40sp"
-       android:text="Date" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-</TextView>
+    <TextView
+        android:id="@+id/stats_list_counter_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="40sp"
+        android:text="Date" />
+    
+    <TextView
+        android:id="@+id/stats_list_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Count"
+        android:textSize="40sp"
+        android:layout_alignParentRight="true" />
+
+</RelativeLayout>
