--- a/res/layout/activity_stats.xml
+++ b/res/layout/activity_stats.xml
@@ -12,6 +12,7 @@
         android:id="@+id/textview_stats_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="40sp"
         android:layout_centerHorizontal="true"
         android:text="Stats" />
     
