--- a/res/layout/activity_counter_list.xml
+++ b/res/layout/activity_counter_list.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:baselineAligned="false"
     android:layout_width="match_parent"
@@ -9,13 +9,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CounterListActivity" >
     
+    <TextView
+        android:id="@+id/textview_counterlist_tip1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="10sp"
+        android:text="@string/counterlist_tip1" />
+    
+        <TextView
+        android:id="@+id/textview_counterlist_tip2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="10sp"
+        android:layout_below="@id/textview_counterlist_tip1"
+        android:text="@string/counterlist_tip2" />
+        
     <ListView
         android:id="@+id/counterList"
-        android:layout_width="0dip"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
+        android:layout_below="@id/textview_counterlist_tip2"
         android:scrollbars="vertical" >
 
     </ListView>
 
-</LinearLayout>
+</RelativeLayout>
